rustdoc-mcp/src/snapshots/rustdoc_mcp__workspace_tests__subcrate_crate_alias_resolution.snap
---
source: rustdoc-mcp/src/workspace_tests.rs
expression: result
---
Item: crate_a
Kind: Module
Visibility: Public
Defined at: crate_a

Structs:
CrateAStruct

Functions:
process_data
