rustdoc-mcp/src/snapshots/rustdoc_mcp__workspace_tests__subcrate_scoped_dependencies.snap
---
source: rustdoc-mcp/src/workspace_tests.rs
expression: "ListCrates::default().execute(&mut state).unwrap()"
---
• alloc 1.95.0-nightly
    The Rust core allocation and collections library
• core 1.95.0-nightly
    The Rust Core Library
• crate-a (workspace-local, aliased as "crate")
    First crate in test workspace
• crate-b (workspace-local)
    Second crate in test workspace
• link-test (workspace-local)
• proc_macro 1.95.0-nightly
    A support library for macro authors when defining new macros
• regex 1.11.2 (crate-a)
    An implementation of regular expressions for Rust. This implementation uses finite automata and guarantees linear time matching on all inputs. 
• serde 1.0.219 (crate-a)
    A generic serialization/deserialization framework
• std 1.95.0-nightly
    The Rust Standard Library
• tempfile 3.21.0 (crate-a)
    A library for managing temporary files and directories.
• test 1.95.0-nightly
    Support code for rustc's built in unit-test and micro-benchmarking framework
